standardmetadata/67b076bc-90d2-4cfe-ab28-304d15cb1f2e/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Acc1__c</fullName>
        <label>Acc1</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Acc2__c</fullName>
        <label>Acc2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acc3__c</fullName>
        <label>Acc3</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>